--- a/cafe.html
+++ b/cafe.html
@@ -12103,14 +12103,14 @@ Error message and password prompt
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20210601142236932" creator="zeid" modified="20210831143437840" modifier="zeid" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20210601142236932" creator="zeid" modified="20210831145339289" modifier="zeid" title="$:/state/tab/sidebar--595412856">
+<pre>CoffeeTabs</pre>
 </div>
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831143141591" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>спецификация</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831145341945" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>projects</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12295,7 +12295,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] $:/plugins/tiddlywiki/highlight [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831144730638" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831144730638" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12567,7 +12567,7 @@ Error message and password prompt
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
 </pre>
 </div>
-<div created="20210831145156074" creator="zeid" modified="20210831145327753" modifier="zeid" tags="Криптосервис" title="Криптосервис - информация">
+<div created="20210831145156074" creator="zeid" modified="20210831145404433" modifier="zeid" tags="Криптосервис" title="Криптосервис - информация">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
