--- a/cafe.html
+++ b/cafe.html
@@ -12295,7 +12295,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831144730638" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppService app_service.zdl SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831145410417" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12913,8 +12913,8 @@ var_dump(bin2hex( $msg));
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210831144146479" creator="zeid" modified="20210831144204212" modifier="zeid" tags="zdl" title="app_service.zdl">
-<pre>```markdown
+<div created="20210831144146479" creator="zeid" modified="20210831145432121" modifier="zeid" tags="zdl" title="app_service.zdl">
+<pre>```properties
 # API которое предоставляет криптосервис для приложения. Через данное API приложение обращается к клиентам.
 # Пользователем данного API является подсистема, обеспечивающая взаимодействие с приложением 
 # Для функционирования криптосервиса в составе криптосервера необходимо открыть соединение для обслуживания данного API.
