--- a/cafe.html
+++ b/cafe.html
@@ -12295,7 +12295,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppService app_service.zdl SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831145410417" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppFeedback AppService app_service.zdl SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831145559681" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12541,14 +12541,14 @@ Error message and password prompt
 
 </pre>
 </div>
-<div created="20210831115833307" creator="zeid" modified="20210831144136650" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
+<div created="20210831115833307" creator="zeid" modified="20210831145616362" modifier="zeid" tags="задачи Криптосервис" title="Криптосервис - задачи">
 <pre>Все интерфейсы описаны в [[src/apps/Zvezda/crypto_service/api|Криптосервис - api]]. 
 Там есть: 
 
 * [[app_service.zdl]]
-* app_feedback.zdl
-* radio_service.zdl
-* radio_feedback.zdl 
+* [[app_feedback.zdl]]
+* [[radio_service.zdl]]
+* [[radio_feedback.zdl]]
 
 Идентификаторы функций – это порядковый номер функций, начиная сверху. 
 
