--- a/cafe.html
+++ b/cafe.html
@@ -451,6 +451,8 @@ Error message and password prompt
 
 <li>app_service.zdl</li>
 
+<li>AppFeedback</li>
+
 <li>AppService</li>
 
 <li>Chandra - assembly</li>
@@ -12297,7 +12299,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] app_feedback.zdl AppFeedback AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831145617897" modifier="zeid" title="$:/StoryList">
+<div created="20210831134543989" creator="zeid" list="[[Криптосервис - информация]] [[Криптосервис - задачи]] AppFeedback AppService SendData [[Криптосервис - handshake &amp; login]] [[Python socket client]] [[Python socket server]] [[Python bytes&lt;-&gt;hex]] Home" modified="20210831145617897" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13085,6 +13087,21 @@ End
 
 ```
 </pre>
+</div>
+<div created="20210831145657855" creator="zeid" modified="20210831145816426" modifier="zeid" title="AppFeedback">
+<pre>Из app_feedback.h:
+
+```h
+enum class Functions { 
+	ReceiveData = 1, 
+	DataStateChanged = 2, 
+};
+```
+
+
+[[app_feedback.zdl]]
+
+{{app_feedback.zdl}}</pre>
 </div>
 <div created="20210831143313296" creator="zeid" modified="20210831144251209" modifier="zeid" tags="[[Криптосервис - api]]" title="AppService">
 <pre>
