--- a/cafe.html
+++ b/cafe.html
@@ -487,6 +487,8 @@ Error message and password prompt
 
 <li>virtualbox</li>
 
+<li>Virtualbox sshfs</li>
+
 <li>zeid</li>
 
 <li>zest</li>
@@ -12115,8 +12117,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831174727100" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>meri</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831175923028" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>code</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12301,7 +12303,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] Home" modified="20210831174943112" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[Virtualbox sshfs]] [[Доступ с флешки]] Home" modified="20210831174943112" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13164,6 +13166,12 @@ pass: 141410
 &lt;&lt;toc-selective-expandable 'virtualbox'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210831175928727" creator="zeid" modified="20210831180105880" modifier="zeid" tags="virtualbox ssh mount linux" title="Virtualbox sshfs">
+<pre>`sudo sshfs -o allow_other root@192.168.1.73:/var/www/  /mnt/www`
+
+33Iguanas&lt;br /&gt;
+Darjee74ling</pre>
 </div>
 <div created="20210831143125434" creator="zeid" modified="20210831174950947" modifier="zeid" title="zeid">
 <pre>33Iguanas
