--- a/cafe.html
+++ b/cafe.html
@@ -459,6 +459,8 @@ Error message and password prompt
 
 <li>php</li>
 
+<li>PHP - display errors</li>
+
 <li>Php socket client</li>
 
 <li>programming</li>
@@ -12303,7 +12305,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[Virtualbox sshfs]] [[Доступ с флешки]] Home" modified="20210831174943112" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[PHP - display errors]] [[Virtualbox sshfs]] [[Доступ с флешки]] Home" modified="20210831174943112" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12965,6 +12967,15 @@ file:///X:/Doc/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B/RiscV/NE32
 &lt;&lt;toc-selective-expandable 'php'&gt;&gt;
 
 &lt;/div&gt;</pre>
+</div>
+<div created="20210831180116858" creator="zeid" modified="20210831180143847" modifier="zeid" tags="php" title="PHP - display errors">
+<pre>
+```php
+ini_set('display_errors', '1');
+ini_set('display_startup_errors', '1');
+error_reporting(E_ALL);
+```
+</pre>
 </div>
 <div created="20210826161958166" modified="20210826162237771" tags="php socket" title="Php socket client" type="">
 <pre>```php
