--- a/cafe.html
+++ b/cafe.html
@@ -12305,7 +12305,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[PHP - display errors]] [[Virtualbox sshfs]] [[Доступ с флешки]] Home" modified="20210831174943112" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] virtualbox Home" modified="20210831180154697" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13171,7 +13171,7 @@ pass: 141410
 
 &lt;/div&gt;</pre>
 </div>
-<div created="20210826091010171" modified="20210826155330004" tags="meri" title="virtualbox">
+<div created="20210826091010171" creator="zeid" modified="20210831180207035" modifier="zeid" tags="linux" title="virtualbox">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'virtualbox'&gt;&gt;
