--- a/cafe.html
+++ b/cafe.html
@@ -429,6 +429,8 @@ Error message and password prompt
 
 <li>Draft of 'AppService' by zeid</li>
 
+<li>Draft of 'linux' by zeid</li>
+
 <li>eclipse</li>
 
 <li>edoc</li>
@@ -12119,8 +12121,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831175923028" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>code</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831180218163" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>meri</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12305,7 +12307,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] virtualbox Home" modified="20210831180154697" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] virtualbox [[Draft of 'linux' by zeid]] Home" modified="20210831180237116" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12821,6 +12823,13 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 </div>
 <div created="20210831143800730" creator="zeid" draft.title="src/apps/Zvezda/crypto_service/api" modified="20210831143800730" modifier="zeid" title="Draft of 'AppService' by zeid">
 <pre></pre>
+</div>
+<div created="20210831180242258" creator="zeid" draft.of="linux" draft.title="linux" modified="20210831180246456" modifier="zeid" tags="CodeCafe" title="Draft of 'linux' by zeid">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210603091809182" modified="20210603091823534" tags="code" title="eclipse">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
