Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -429,8 +429,6 @@ Error message and password prompt
 
 <li>Draft of 'AppService' by zeid</li>
 
-<li>Draft of 'linux' by zeid</li>
-
 <li>eclipse</li>
 
 <li>edoc</li>
@@ -454,6 +452,8 @@ Error message and password prompt
 <li>LHD-RV микроконтроллер</li>
 
 <li>LHD-RV: дампы памяти</li>
+
+<li>linux</li>
 
 <li>meri</li>
 
@@ -12307,7 +12307,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] virtualbox [[Draft of 'linux' by zeid]] Home" modified="20210831180237116" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[Доступ с флешки]] virtualbox linux Home" modified="20210831180237116" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12824,13 +12824,6 @@ api.admin_feedback_ports = localhost:10011, localhost:10012
 <div created="20210831143800730" creator="zeid" draft.title="src/apps/Zvezda/crypto_service/api" modified="20210831143800730" modifier="zeid" title="Draft of 'AppService' by zeid">
 <pre></pre>
 </div>
-<div created="20210831180242258" creator="zeid" draft.of="linux" draft.title="linux" modified="20210831180246456" modifier="zeid" tags="CodeCafe" title="Draft of 'linux' by zeid">
-<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
-
-&lt;&lt;toc-selective-expandable 'TableOfContents'&gt;&gt;
-
-&lt;/div&gt;</pre>
-</div>
 <div created="20210603091809182" modified="20210603091823534" tags="code" title="eclipse">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
@@ -12945,6 +12938,13 @@ file:///X:/Doc/%D0%A1%D1%82%D0%B0%D0%BD%D0%B4%D0%B0%D1%80%D1%82%D1%8B/RiscV/NE32
 
 Дамп может быть модифицируемым (RAM) или немодифицируемым (ROM, EEPROM). В модифицируемом дампе должна обеспечиваться возможность изменения содержимого любой ячейки памяти (байта или слова в зависимости от представления).
 </pre>
+</div>
+<div created="20210831180242258" creator="zeid" modified="20210831180252239" modifier="zeid" tags="CodeCafe" title="linux">
+<pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
+
+&lt;&lt;toc-selective-expandable 'linux'&gt;&gt;
+
+&lt;/div&gt;</pre>
 </div>
 <div created="20210602110005583" modified="20210602141202821" tags="CodeCafe" title="meri">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
