--- a/cafe.html
+++ b/cafe.html
@@ -12121,8 +12121,8 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831180301868" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>спецификация</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831180340270" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>задачи</pre>
 </div>
 <div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
 <pre>Пак Звезда</pre>
@@ -12307,7 +12307,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="спецификация [[Доступ с флешки]] virtualbox linux Home" modified="20210831180310281" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="задачи virtualbox linux Home" modified="20210831180345987" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13295,7 +13295,7 @@ jcr2297215</pre>
 <div created="20210831174736934" creator="zeid" modified="20210831174751349" modifier="zeid" tags="meri" title="Доступ с флешки">
 <pre>xfreerdp /v:desktop-sn0kbj6 /d:mikron.sitronics.com /u:5 /f  /bpp:32 -bitmap-cache</pre>
 </div>
-<div created="20210601144226077" modified="20210603095244925" tags="CodeCafe" title="задачи">
+<div created="20210601144226077" creator="zeid" modified="20210831180353146" modifier="zeid" tags="meri" title="задачи">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'задачи'&gt;&gt;
