--- a/cafe.html
+++ b/cafe.html
@@ -355,6 +355,8 @@ Error message and password prompt
 
 <li>$:/state/toc/gdbcommand--data-disassemble-225017671</li>
 
+<li>$:/state/toc/info-спецификация-1433339656</li>
+
 <li>$:/state/toc/LHD-дизассемблер-1791797811</li>
 
 <li>$:/state/toc/meri-Virtualbox - Lamp--2008402584</li>
@@ -362,6 +364,8 @@ Error message and password prompt
 <li>$:/state/toc/meri-virtualbox--2008402584</li>
 
 <li>$:/state/toc/meri-virtualbox-190844615</li>
+
+<li>$:/state/toc/meri-задачи--2008402584</li>
 
 <li>$:/state/toc/задачи-todo--141392297</li>
 
@@ -12121,11 +12125,11 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831180340270" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>задачи</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831180514853" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>task</pre>
 </div>
-<div created="20210826160602899" modified="20210831134902893" title="$:/state/tab2--2135597508">
-<pre>Пак Звезда</pre>
+<div created="20210826160602899" creator="zeid" modified="20210831180422872" modifier="zeid" title="$:/state/tab2--2135597508">
+<pre>LHD-RV</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
 <pre>LHD-RV: дампы памяти</pre>
@@ -12133,8 +12137,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" modified="20210830112717716" title="$:/state/tab2-2058192071">
-<pre>projects</pre>
+<div created="20210602141529428" creator="zeid" modified="20210831180540218" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>разное</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12271,6 +12275,9 @@ Error message and password prompt
 <div created="20210603090923510" modified="20210603090924718" title="$:/state/toc/gdbcommand--data-disassemble-225017671">
 <pre>close</pre>
 </div>
+<div created="20210831180443289" creator="zeid" modified="20210831180443289" modifier="zeid" title="$:/state/toc/info-спецификация-1433339656">
+<pre>open</pre>
+</div>
 <div created="20210603092001797" modified="20210603092002999" title="$:/state/toc/LHD-дизассемблер-1791797811">
 <pre>close</pre>
 </div>
@@ -12282,6 +12289,9 @@ Error message and password prompt
 </div>
 <div created="20210830101012592" modified="20210830101012592" title="$:/state/toc/meri-virtualbox-190844615">
 <pre>open</pre>
+</div>
+<div created="20210831180524587" creator="zeid" modified="20210831180525443" modifier="zeid" title="$:/state/toc/meri-задачи--2008402584">
+<pre>close</pre>
 </div>
 <div created="20210603095354870" modified="20210603095354870" title="$:/state/toc/задачи-todo--141392297">
 <pre>open</pre>
@@ -12307,7 +12317,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="задачи virtualbox linux Home" modified="20210831180345987" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="разное" modified="20210831180546652" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13567,7 +13577,7 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 возвращает список с одной некорректной позицией
 </pre>
 </div>
-<div created="20210601144335278" modified="20210602141405837" tags="CodeCafe" title="разное">
+<div created="20210601144335278" creator="zeid" modified="20210831180555760" modifier="zeid" tags="zest" title="разное">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'разное'&gt;&gt;
