--- a/cafe.html
+++ b/cafe.html
@@ -12317,7 +12317,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="разное" modified="20210831180546652" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="task" modified="20210831180645023" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13144,7 +13144,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 * 20.07 
 * 17.08</pre>
 </div>
-<div created="20210603084626198" modified="20210603084634278" tags="CodeCafe" title="task">
+<div created="20210603084626198" creator="zeid" modified="20210831180652716" modifier="zeid" tags="meri" title="task">
 <pre>&lt;div class=&quot;tc-table-of-contents&quot;&gt;
 
 &lt;&lt;toc-selective-expandable 'task'&gt;&gt;
