--- a/cafe.html
+++ b/cafe.html
@@ -12125,11 +12125,11 @@ Error message and password prompt
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
 </div>
-<div created="20210826160606675" creator="zeid" modified="20210831180514853" modifier="zeid" title="$:/state/tab2--2017306950">
-<pre>task</pre>
+<div created="20210826160606675" creator="zeid" modified="20210831180714702" modifier="zeid" title="$:/state/tab2--2017306950">
+<pre>projects</pre>
 </div>
-<div created="20210826160602899" creator="zeid" modified="20210831180422872" modifier="zeid" title="$:/state/tab2--2135597508">
-<pre>LHD-RV</pre>
+<div created="20210826160602899" creator="zeid" modified="20210831180717889" modifier="zeid" title="$:/state/tab2--2135597508">
+<pre>Пак Звезда</pre>
 </div>
 <div created="20210602140213588" modified="20210602140717715" title="$:/state/tab2-1422387773">
 <pre>LHD-RV: дампы памяти</pre>
@@ -12317,7 +12317,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="task" modified="20210831180645023" modifier="zeid" title="$:/StoryList">
+<div created="20210831174642368" creator="zeid" list="[[Криптосервис - информация]]" modified="20210831180733976" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13408,7 +13408,7 @@ socket_close($socketOut);
 Этого набора функций достаточно, чтобы организовать взаимодействие между клиентом и сервером. Все остальные функции (в т.ч. сущности Notification) предлагаю пока что проигнорировать.
 </pre>
 </div>
-<div created="20210831145156074" creator="zeid" modified="20210831145404433" modifier="zeid" tags="Криптосервис" title="Криптосервис - информация">
+<div created="20210831145156074" creator="zeid" modified="20210831180742043" modifier="zeid" tags="Криптосервис info" title="Криптосервис - информация">
 <pre>Коммуникационный пакет для исходящего сообщения имеет вид:
 
 ```css
