--- a/cafe.html
+++ b/cafe.html
@@ -539,6 +539,8 @@ Error message and password prompt
 
 <li>Разобраться с окном сопроцессора</li>
 
+<li>Рекурсивная замена в названиях файлов</li>
+
 <li>Сайт Пак Звезда</li>
 
 <li>Смена пароля Meri</li>
@@ -12119,8 +12121,8 @@ Error message and password prompt
 <div created="20210603083336622" modified="20210603083336622" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Plugins</pre>
 </div>
-<div created="20210601142236932" creator="zeid" modified="20210831174720174" modifier="zeid" title="$:/state/tab/sidebar--595412856">
-<pre>CoffeeTabs</pre>
+<div created="20210601142236932" creator="zeid" modified="20210831180757349" modifier="zeid" title="$:/state/tab/sidebar--595412856">
+<pre>CodeCafe</pre>
 </div>
 <div created="20210602141535668" modified="20210826161921011" title="$:/state/tab2--1311305590">
 <pre>java</pre>
@@ -12137,8 +12139,8 @@ Error message and password prompt
 <div created="20210830101055416" modified="20210831134702005" title="$:/state/tab2-1422432489">
 <pre>python</pre>
 </div>
-<div created="20210602141529428" creator="zeid" modified="20210831180540218" modifier="zeid" title="$:/state/tab2-2058192071">
-<pre>разное</pre>
+<div created="20210602141529428" creator="zeid" modified="20210831180752906" modifier="zeid" title="$:/state/tab2-2058192071">
+<pre>projects</pre>
 </div>
 <div created="20210603084225271" modified="20210831115831863" title="$:/state/tab2-678259293">
 <pre>Пак Звезда</pre>
@@ -12317,7 +12319,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210831174642368" creator="zeid" list="[[Криптосервис - информация]]" modified="20210831180733976" modifier="zeid" title="$:/StoryList">
+<div list="[[Рекурсивная замена в названиях файлов]] Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -13589,6 +13591,33 @@ List&lt;Position&gt; positions = getDocumentManagedPositions().get(category);
 
 Не отображаются дампы памяти:
 в списке регистров надо передавать `MOD_SIZE` и `HASH_MODE` (фк-ция setRegisters в CoprocessorRegisters)
+</pre>
+</div>
+<div created="20210831180822649" creator="zeid" modified="20210831180901951" modifier="zeid" tags="bash" title="Рекурсивная замена в названиях файлов">
+<pre>
+```bash
+for i in `find . -name '*smfaq*'`; do mv &quot;${i}&quot; &quot;${i/smfaq/scanswers}&quot;; done
+
+Рекурсивная замена в содержимом
+
+find . -type f -exec sed --in-place 's/SmFaq/ScAnswers/g' \{\} \;
+
+
+
+find . -depth -exec rename 's/(.*)\/([^\/]*)/$1\/\L$2/' {} \; - перевод имен файлов в нижний регистр
+
+
+
+
+find . -type f -exec sed --in-place 's/id=&quot;loading&quot; style=&quot;/id=&quot;loading&quot; style=&quot;display:none;/g' \{\} \;
+
+
+
+for i in `find . -name '*image*'`; do mv &quot;${i}&quot; &quot;${i/image/Image}&quot;; done
+
+for i in `find . -name '*Image*'`; do mv &quot;${i}&quot; &quot;${i/Image/image}&quot;; done
+
+```
 </pre>
 </div>
 <div created="20210826161107998" modified="20210826161510907" tags="[[Пак Звезда]] сайт" title="Сайт Пак Звезда">
