Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -12341,7 +12341,7 @@ Error message and password prompt
 <div created="20210831143028948" creator="z" modified="20210831143029280" modifier="zei" title="$:/status/UserName">
 <pre>zeid</pre>
 </div>
-<div created="20210901061655272" creator="zeid" list="[[Криптосервис - задачи]] [[Криптосервис - api]] AppService Home Криптосервис crypto_service.ini" modified="20210901061915317" modifier="zeid" title="$:/StoryList">
+<div created="20210901061655272" creator="zeid" list="[[Криптосервис - задачи]] AppFeedback AppService Home Криптосервис crypto_service.ini" modified="20210901061928893" modifier="zeid" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/snowwhite" description="Centralises the story river" name="Centralised" plugin-type="theme" title="$:/themes/tiddlywiki/centralised" type="application/json" version="5.1.23">
@@ -12737,7 +12737,7 @@ End
 ```
 </pre>
 </div>
-<div created="20210831145657855" creator="zeid" modified="20210831145816426" modifier="zeid" title="AppFeedback">
+<div created="20210831145657855" creator="zeid" modified="20210901061935831" modifier="zeid" tags="[[Криптосервис - api]]" title="AppFeedback">
 <pre>Из app_feedback.h:
 
 ```h
