Saved by TiddlyWiki

--- a/cafe.html
+++ b/cafe.html
@@ -13893,13 +13893,13 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 <div created="20210603092730831" modified="20210603095222158" tags="" title="Отображать тип проекта (LHD-RV) при генерации">
 <pre>Отображение типа проекта (LHD-RV/LHD) при замене старого существующего проекта при генерации из .lhd-файла</pre>
 </div>
-<div created="20210902110111815" creator="zeid" modified="20210902112147640" modifier="zeid" tags="Криптосервис info" title="ПАК «Звезда» Примеры вызовов функций криптосервиса">
+<div created="20210902110111815" creator="zeid" modified="20210902120455615" modifier="zeid" tags="Криптосервис info CRISP" title="ПАК «Звезда» Примеры вызовов функций криптосервиса">
 <pre>Теоретическая база
 Состав ПАК «Звезда»:
 
-# микросхема, интегрируемая в конечное устройство (далее по тексту - ЭБ).
-# криптосервис.
-# модуль безопасности криптосервиса (далее по тексту ЭБКС).
+# микросхема, интегрируемая в конечное устройство (далее по тексту - [[ЭБ]]).
+# [[криптосервис]].
+# модуль безопасности криптосервиса (далее по тексту [[ЭБКС]]).
 Все остальные компоненты находятся вне зоны ответственности ПАК «Звезда» и реализуются заказчиками и партнёрами.
 
 Существует две заинтересованных стороны взаимодействия: 
@@ -13913,9 +13913,9 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 # передатчика (передаёт сообщение в сеть);
 # ЭБ (осуществляет шифрование и расшифрование).
 
-Сервер приложений – некоторое стороннее ПО заказчика или партнёра, которое обрабатывает сообщения от клиента на логическом уровне и которое пользуется услугами криптосервиса по шифрованию, расшифрованию сообщений и администрированию клиентов.
+[[Сервер приложений|сервер приложений]] – некоторое стороннее ПО заказчика или партнёра, которое обрабатывает сообщения от клиента на логическом уровне и которое пользуется услугами криптосервиса по шифрованию, расшифрованию сообщений и администрированию клиентов.
 
-Зашифрованные сообщения далее по тексту могут называться CRISP-сообщения.
+Зашифрованные сообщения далее по тексту могут называться [[CRISP]]-сообщения.
 
 * Интерфейсы, предназначенные для обращения к криптосервису, называются AppService API и RadioService API. 
 * Интерфейсы, предназначенные для обращения криптосервиса к внешним сущностям, называются RadioFeedback API и AppFeedback API.
@@ -13929,33 +13929,48 @@ PKG_TYPE : U16 + MSG_ID : U16 + FUNC_ID : U16 + PARAMS_LEN : U32 + [IN_PARAMS : 
 Синим цветом обозначены элементы вне зоны ответственности ПАК «Звезда». Зелёным цветом обозначены элементы ПАК «Звезда», за которые отвечает НИИМЭ.
 
 Существует два типа сообщений:
-с подтверждением;
-без подтверждения.
+
+# с подтверждением;
+# без подтверждения.
+
 Сообщения с подтверждением требуют некоторых дополнительных сообщений установки и закрытия сессии. Этот процесс управляется криптосервисом и контроллером на стороне клиента.
 
+---
+
 Сценарий отправки сообщения от сервера приложений клиенту:
-сервер приложений вызывает функцию SendData (или PostData) в AppService API криптосервиса и передаёт данные в открытом виде;
-криптосервис выполняет внутреннюю логику;
-криптосервис вызывает функцию SendMsg в RadioFeedback API транспортного прокси и передаёт ему зашифрованные данные;
-транспортный прокси передаёт сообщение клиенту;
-клиент передаёт сообщение ЭБ;
-клиент получает расшифрованное сообщение и выполняет свою бизнес-логику.
+
+# сервер приложений вызывает функцию SendData (или PostData) в AppService API криптосервиса и передаёт данные в открытом виде;
+# криптосервис выполняет внутреннюю логику;
+# криптосервис вызывает функцию SendMsg в RadioFeedback API  транспортного прокси и передаёт ему зашифрованные данные;
+# транспортный прокси передаёт сообщение клиенту;
+# клиент передаёт сообщение ЭБ;
+# клиент получает расшифрованное сообщение и выполняет свою бизнес-логику.
 
 Сценарий отправки сообщения от клиента серверу приложений:
-клиент формирует сообщение в открытом виде и направляет его ЭБ;
-клиент получает зашифрованное сообщение и передаёт в канал связи;
-транспортный прокси получает сообщение;
-транспортный прокси вызывает функцию ReceiveMsg в RadioService API криптосервиса и передаёт зашифрованное сообщение криптосервису;
-криптосервис выполняет свою внутреннюю логику;
-криптосервис вызывает функцию ReceiveData в AppFeedback API сервера приложений и передаёт расшифрованные данные.
+
+# клиент формирует сообщение в открытом виде и направляет его ЭБ;
+# клиент получает зашифрованное сообщение и передаёт в канал связи;
+# транспортный прокси получает сообщение;
+# транспортный прокси вызывает функцию ReceiveMsg в RadioService API криптосервиса и передаёт зашифрованное сообщение криптосервису;
+# криптосервис выполняет свою внутреннюю логику;
+# криптосервис вызывает функцию ReceiveData в AppFeedback API сервера приложений и передаёт расшифрованные данные.
 
 Далее по тексту будет представлен RPC-лог вызовов функций API. Лог пишется от лица криптосервиса. Формат сообщений следующий:
+
+```properties
 &lt;направление сообщения и имя API&gt;
 RawPkg:   &lt;RPC Header&gt; |  &lt;RPC Message&gt;
 Type:     &lt;A&gt; (&lt;тип сообщения&gt;)
 MsgId:    &lt;B&gt; (идентификатор сообщения)
 FuncId:   &lt;C&gt; (&lt;имя функции&gt;)
-где RawPkg – набор сырых байт, который передаётся по сокетам, RpcHeader – заголовок, который описан в документации по RPC (doc/utils/rpc/RPC Technology.docx, Глава 4), RpcMessage – сериализованное сообщение, формат описан в документации по RPC, Type, MsgId, FuncId – парсинг заголовка для более понятного восприятия сообщений.
+```
+
+где
+
+* RawPkg – набор сырых байт, который передаётся по сокетам
+* RpcHeader – заголовок, который описан в документации по RPC (doc/utils/rpc/RPC Technology.docx, Глава 4)
+* RpcMessage – сериализованное сообщение, формат описан в документации по RPC
+* Type, MsgId, FuncId – парсинг заголовка для более понятного восприятия сообщений.
 
 Некоторые сообщения будут содержать CRISP-сообщения
 RawPkg:   &lt;RPC Header&gt;  | &lt;RPC Message&gt;
